<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Registration">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:padding="20dp"
        android:layout_weight="4">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <LinearLayout
                android:padding="10dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageButton
                    android:id="@+id/addProfileImage"
                    android:onClick="addProfilePic"
                    android:background="@drawable/bg1"
                    android:src="@drawable/ic_baseline_account_circle_24"
                    android:layout_width="150sp"
                    android:layout_height="150sp"/>


            </LinearLayout>













            <TextView
                android:id="@+id/textView5"
                android:layout_width="295dp"
                android:layout_height="35dp"
                android:text="@string/name"
                android:textColor="@color/primary_text"
                android:textSize="20sp"
                android:textStyle="bold"
                />
            <EditText  android:id="@+id/etName"
                android:layout_width="310dp"
                android:layout_height="44dp"
                android:background="@drawable/textbox"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/name_hint"
                android:inputType="textPersonName"
                android:textColorHint="@color/secondary_text"
                />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="295dp"
                android:layout_height="35dp"
                android:layout_marginTop="20dp"
                android:text="@string/address"
                android:textColor="@color/primary_text"
                android:textSize="20sp"
                android:textStyle="bold"
                />

            <EditText
                android:id="@+id/etAddress"
                android:layout_width="310dp"
                android:layout_height="44dp"
                android:background="@drawable/textbox"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/address_hint"
                android:inputType="textPersonName"
                android:textColorHint="@color/secondary_text"
                />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="295dp"
                android:layout_height="35dp"
                android:layout_marginTop="20dp"
                android:text="@string/mobile"
                android:textColor="@color/primary_text"
                android:textSize="20sp"
                android:textStyle="bold"
                />

            <EditText
                android:id="@+id/etContact"
                android:layout_width="310dp"
                android:layout_height="44dp"
                android:background="@drawable/textbox"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/contact_hint"
                android:inputType="textPersonName"
                android:textColorHint="@color/secondary_text"
                />





            <TextView
                android:id="@+id/textView8"
                android:layout_width="295dp"
                android:layout_height="35dp"
                android:layout_marginTop="20dp"
                android:text="@string/email"
                android:textColor="@color/primary_text"
                android:textSize="20sp"
                android:textStyle="bold"
                />

            <EditText
                android:id="@+id/etEmail"
                android:layout_width="310dp"
                android:layout_height="44dp"
                android:background="@drawable/textbox"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/email_hint"
                android:inputType="textPersonName"
                android:textColorHint="@color/secondary_text"
                />


            <TextView
                android:id="@+id/textView9"
                android:layout_width="295dp"
                android:layout_height="35dp"
                android:layout_marginTop="20dp"
                android:text="@string/password"
                android:textColor="@color/primary_text"
                android:textSize="20sp"
                android:textStyle="bold"
                />

            <EditText
                android:id="@+id/etPassword"
                android:layout_width="310dp"
                android:layout_height="44dp"
                android:layout_marginBottom="68dp"
                android:background="@drawable/textbox"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/password_hint"
                android:inputType="textPassword"
                android:textColorHint="@color/secondary_text"
                />

        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:orientation="vertical"

        android:gravity="center">

        <Button
            android:id="@+id/button"
            android:layout_width="165dp"
            android:layout_height="54dp"



            android:background="@drawable/button"
            android:onClick="REGISTER"
            android:text="@string/register"
            android:textAllCaps="false"
            android:textColor="@color/primary_text"
            android:textSize="25sp"
            android:textStyle="bold" />
        <LinearLayout
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="40dp">


            <TextView

                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"


                android:text="@string/already_register"
                android:textColor="@color/secondary_text"
                android:textSize="18sp" />

            <TextView
                android:layout_marginLeft="10dp"
                android:id="@+id/login_btn_in_register"
                android:layout_width="wrap_content"
                android:layout_height="25dp"
                android:background="@drawable/no_body_btn"


                android:onClick="login"
                android:text="@string/login"
                android:textColor="@color/dark_primary"
                android:textSize="18sp"
                android:textStyle="bold" />
        </LinearLayout>



    </LinearLayout>


</LinearLayout>