<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".EditProfile">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:padding="20dp"
        android:layout_weight="4">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <LinearLayout
                android:padding="10dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageButton
                    android:id="@+id/addProfileImageEdit"
                    android:onClick="addProfilePic"
                    android:background="@drawable/bg1"
                    android:src="@drawable/ic_baseline_account_circle_24"
                    android:layout_width="150sp"
                    android:layout_height="150sp"/>


            </LinearLayout>













            <TextView
                android:id="@+id/textView5"
                android:layout_width="295dp"
                android:layout_height="35dp"
                android:text="@string/name"
                android:textColor="@color/primary_text"
                android:textSize="20sp"
                android:textStyle="bold"
                />
            <EditText  android:id="@+id/etNameEdit"
                android:layout_width="310dp"
                android:layout_height="44dp"
                android:background="@drawable/textbox"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/name_hint"
                android:inputType="textPersonName"
                android:textColorHint="@color/secondary_text"
                />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="295dp"
                android:layout_height="35dp"
                android:layout_marginTop="20dp"
                android:text="@string/address"
                android:textColor="@color/primary_text"
                android:textSize="20sp"
                android:textStyle="bold"
                />

            <EditText
                android:id="@+id/etAddressEdit"
                android:layout_width="310dp"
                android:layout_height="44dp"
                android:background="@drawable/textbox"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/address_hint"
                android:inputType="textPersonName"
                android:textColorHint="@color/secondary_text"
                />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="295dp"
                android:layout_height="35dp"
                android:layout_marginTop="20dp"
                android:text="@string/mobile"
                android:textColor="@color/primary_text"
                android:textSize="20sp"
                android:textStyle="bold"
                />

            <EditText
                android:id="@+id/etContactEdit"
                android:layout_width="310dp"
                android:layout_height="44dp"
                android:background="@drawable/textbox"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/contact_hint"
                android:inputType="textPersonName"
                android:textColorHint="@color/secondary_text"
                />





            <TextView
                android:id="@+id/textView8"
                android:layout_width="295dp"
                android:layout_height="35dp"
                android:layout_marginTop="20dp"
                android:text="@string/email"
                android:textColor="@color/primary_text"
                android:textSize="20sp"
                android:textStyle="bold"
                />

            <EditText
                android:id="@+id/etEmailEdit"
                android:layout_width="310dp"
                android:layout_height="44dp"
                android:background="@drawable/textbox"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/email_hint"
                android:inputType="textPersonName"
                android:textColorHint="@color/secondary_text"
                />


            <TextView
                android:id="@+id/textView9"
                android:layout_width="295dp"
                android:layout_height="35dp"
                android:layout_marginTop="20dp"
                android:text="@string/password"
                android:textColor="@color/primary_text"
                android:textSize="20sp"
                android:textStyle="bold"
                />

            <EditText
                android:id="@+id/etPasswordEdit"
                android:layout_width="310dp"
                android:layout_height="44dp"
                android:layout_marginBottom="68dp"
                android:background="@drawable/textbox"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/password_hint"
                android:inputType="textPassword"
                android:textColorHint="@color/secondary_text"
                />

        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:orientation="horizontal"

        android:gravity="center">


        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center"



            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <ImageButton

                android:id="@+id/editprofile"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@drawable/bg1"
                android:layout_marginRight="30dp"

                android:onClick="edit"
                android:padding="10dp"
                android:src="@drawable/ic_baseline_edit_24"/>


            <ImageButton
                android:id="@+id/saveprofile"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginLeft="30dp"

                android:background="@drawable/bg1"

                android:onClick="saveAll"
                android:padding="10dp"
                android:src="@drawable/ic_baseline_save_24" />
        </LinearLayout>




    </LinearLayout>


</LinearLayout>