<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
     android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:padding="20sp"

    xmlns:android="http://schemas.android.com/apk/res/android" >

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="0px"
        android:layout_weight="1">

        <LinearLayout
            android:elevation="1mm"
            android:onClick="editProfile"
            android:layout_marginTop="60dp"
            android:layout_width="0px"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:elevation="10dp"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:background="@drawable/bg1"
                android:padding="15dp"
                android:src="@drawable/ic_baseline_person_add_24">

            </ImageView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/edittheprofile"
                android:textColor="@color/primary_text"
                android:textSize="20sp">

            </TextView>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@color/divider">

            </View>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/edittheprofilehint"
                android:textSize="16sp">

            </TextView>

        </LinearLayout>

        <LinearLayout
            android:onClick="viewTasks"
            android:elevation="1mm"
            android:layout_marginTop="60dp"
            android:layout_width="0px"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >
            <ImageView
                android:elevation="20dp"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:src="@drawable/ic_baseline_format_list_numbered_24"
                android:background="@drawable/bg4"
                android:padding="15dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp">

            </ImageView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/viewthetask"
                android:gravity="center"
                android:textSize="20sp"
                android:padding="5dp"
                android:textColor="@color/primary_text">

            </TextView>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/divider"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp">

            </View>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/viewthetaskhint"
                android:gravity="center"
                android:textSize="16sp"
                android:padding="5dp">

            </TextView>

        </LinearLayout>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0px"
        android:layout_weight="1">

        <LinearLayout
            android:onClick="addTasks"
            android:elevation="1mm"
            android:layout_marginTop="60dp"
            android:layout_width="0px"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >
            <ImageView
                android:elevation="20dp"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:src="@drawable/ic_baseline_control_point_duplicate_24"
                android:background="@drawable/bg3"
                android:padding="15dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp">

            </ImageView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/addtask"
                android:gravity="center"
                android:textSize="20sp"
                android:padding="5dp"
                android:textColor="@color/primary_text">

            </TextView>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/divider"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp">

            </View>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/addtaskhint"
                android:gravity="center"
                android:textSize="16sp"
                android:padding="5dp">

            </TextView>

        </LinearLayout>

    </LinearLayout>




</LinearLayout>