<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".Login">

    <ScrollView
        android:id="@+id/scrollView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="49dp"
        android:scrollbarStyle="outsideInset"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginTop="200dp"
                android:background="@drawable/container"

                android:gravity="center"
                android:orientation="vertical"
                android:padding="50dp">


                <EditText
                    android:padding="5dp"
                    android:id="@+id/etName"
                    android:layout_width="200dp"
                    android:layout_height="44dp"
                    android:layout_marginBottom="4dp"
                    android:background="@drawable/textbox"
                    android:ems="10"
                    android:gravity="center"
                    android:hint="@string/name_hint"
                    android:inputType="textPersonName"
                    android:textColorHint="@color/secondary_text"
                    app:layout_constraintBottom_toBottomOf="parent"
                    tools:layout_editor_absoluteX="103dp" />

                <EditText
                    android:id="@+id/etPassword"
                    android:layout_width="200dp"
                    android:layout_height="44dp"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/textbox"
                    android:ems="10"
                    android:gravity="center"
                    android:hint="@string/password_hint"
                    android:inputType="textPassword"
                    android:textColorHint="@color/secondary_text"
                    tools:layout_editor_absoluteX="101dp"
                    tools:layout_editor_absoluteY="687dp" />

            </LinearLayout>

        </LinearLayout>
    </ScrollView>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="92dp"
        android:layout_marginBottom="16dp"
        android:text="@string/your_are_not"
        android:textColor="@color/primary_text"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button" />

    <Button
        android:id="@+id/button"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="133dp"
        android:layout_marginLeft="133dp"
        android:layout_marginTop="49dp"
        android:layout_marginEnd="113dp"
        android:layout_marginRight="113dp"
        android:background="@drawable/button"
        android:elevation="200dp"
        android:onClick="login"
        android:text="@string/login"
        android:textAllCaps="false"
        android:textColor="@color/primary_text"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scrollView3" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="92dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/no_body_btn"
        android:elevation="200dp"
        android:onClick="register"
        android:text="@string/register"
        android:textColor="@color/dark_primary"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button" />


</androidx.constraintlayout.widget.ConstraintLayout>